examples/invalid/semanticErr/declaration/basicTypeErr12.wacc
# type mismatch: string <- char
# Output:
# #semantic error#

#Program:#

begin
  string s = 'h'
end
